2004-01-07  Adam D. Moss  <adam@gimp.org>

	* audioconvert/ac_freq.c: Fix another potential overenthusiasm
	when frequency-upscaling a single 16-bit sample.	

2003-12-26  Adam D. Moss  <adam@gimp.org>

	* src/extensions/al_ext_loki.c: Use the correct sample size
	in alBufferWriteData_LOKI() after the monoification.  Fixes the
	problem of the buffer playing for much longer than it should.

2003-12-23  Adam D. Moss  <adam@gimp.org>

	* audioconvert/ac_freq.c: Fix some minor brainos in the
	interpolated resample*2, and (more critically) don't do
	extraneous bad things when cvt->len_cvt==0.

2003-11-11  Adam D. Moss  <adam@gimp.org>

	* src/al_debug.c: Fix an implicit declaration: the man
	page on linux says that vsnprintf() is a GNU extension, so #define
	_GNU_SOURCE

2003-11-11  Adam D. Moss  <adam@gimp.org>

	* src/arch/sdl/sdl.c: #include <string.h> to avoid implicit
	declaration of memcpy()/memset()

2003-11-11  Adam D. Moss  <adam@gimp.org>

	* audioconvert/ac_freq.c
	For the first sample in a chunk to be resampled*2, use dampened
        extrapolation instead of interpolation to somewhat reduce 'clicking'.

2003-11-03  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* Michel Danzer's big endian patch

2003-10-23  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* audioconvert/ac_freq.c
	Added Adam Moss's patch to improve fidelity of low-sampled sounds
	in higher sampling-rate environments.

2003-06-20  Erik Greenwald <erik@smluc.org>

	* (many)
	Removed trailing spaces and tabs.

2003-05-15  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* src/arch/alsa/alsa.c:
	Moves alsa/asoundlib.h inclusion below sys/time.h

2003-05-07  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* src/al_filter.c:
	Changed doppler to multiply existing pitch, if present.

2003-04-01  J. Valenzuela  <jvalenzu@infinite-monkeys.org>

	* misc
	Joe Tennies's vector patches

2003-03-23  Joseph Valenzuela  <jvalenzu@formosa.infinite-monkeys.org>

	* src/al_source.c: