@@ -18,7 +18,7 @@ chmod 755 config.sub   >/dev/null 2>&1
 
 MAJOR_VERSION=0
 MINOR_VERSION=0
-MICRO_VERSION=6
+MICRO_VERSION=7
 INTERFACE_AGE=0
 BINARY_AGE=0
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION
